[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.19", features = ["map_physical_memory"] }
linked_list_allocator = { version = "0.9.1", features = ["alloc_ref"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
x86_64 = "*"
spin = "0.9.2"
